@@ -5,6 +5,7 @@
 ### Added
 
 - Disabled vehicle models will now be visible from much further
+  - Does not apply for mod vehicles
 - Added new value to active distance slider: Very Close (0.5x)
 - Added multiple sources of rule files
   - MOP will test connection to each one of them, and pick the first one that is online
@@ -12,7 +13,8 @@
 - Vehicles are now affected by the activate distance slider
 - Certain objects can now have a minimum toggle distance (ex: Perajarvi's minimum distance is always 600 meters, no matter the activate distance slider)
 - Large items (such as garbage barell) will be visible from a further distance (in Balanced mode or above)
-  - The higher the quality level, the smaller items will be visible from further distance.
+  - The higher the quality level, the smaller items will be visible from further distance
+  - Does not apply for mod items
 - In Performance mode, if you enter a vehicle, other vehicles will be disabled sooner
 
 ### Changes
